# Agent_SHIP

./: .evn.example  README.md  main.py  pyproject.toml
agent/: __init__.py  ebm_tool.py  email_tool.py  graph.py  knowledge_base.py  state.py
artifacts/: ebm_local_explanation.json
models/: ebm_model.pkl  feature_names.txt  train_ebm.py
storage/: sessions.json
ui/: app.py  styles.css
