[project]
name = "shipment-delay-agent"
version = "0.1.0"
description = "LangGraph + Ollama + EBM shipment delay predictor with explainable AI"
requires-python = ">=3.9,<3.13"
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "interpret>=0.6.0",
  "matplotlib>=3.8",
  "python-dotenv>=1.0",
  "streamlit>=1.36",
  "langgraph>=0.6.4",
  "langchain-core>=0.2.29",
  "langchain-ollama>=0.1.0",
  "requests>=2.32",
  "plotly>=5.0",
  "imbalanced-learn>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "ui"]